--- a/InstagramStories/InstagramStories/InstagramStories/InstagramStories.csproj
+++ b/InstagramStories/InstagramStories/InstagramStories/InstagramStories.csproj
@@ -22,6 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="AnimatedSwipeUp.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Pages\StoriesPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
